--- a/WorkingDemo/express-react/express/package.json
+++ b/WorkingDemo/express-react/express/package.json
@@ -8,11 +8,13 @@
     "@aws-sdk/client-s3": "^3.100.0",
     "@aws-sdk/s3-request-presigner": "^3.306.0",
     "@prisma/client": "^4.12.0",
+    "prisma": "^4.12.0",
     "aws-sdk": "^2.853.0",
     "dotenv": "^8.2.0",
     "express": "^5.0.0-beta.1",
     "multer": "^1.4.5-lts.1",
-    "sharp": "^0.30.6"
+    "sharp": "^0.30.6",
+    "npx": "^10.2.2"
   },
   "scripts": {
     "start": "node server.js",
