--- a/WorkingDemo/express-react/react/package.json
+++ b/WorkingDemo/express-react/react/package.json
@@ -16,7 +16,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "npx": "^10.2.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
