--- a/WorkingDemo/express-react/react/package.json
+++ b/WorkingDemo/express-react/react/package.json
@@ -5,24 +5,36 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "static-scan": "./node_modules/.bin/es6-plato -r -d ./reports -e .eslintrc.json ./*.js ./src/*.jsx ./src/components/*.jsx ./src/components/pages/*.jsx",
+    "lint": "npx eslint ./*.js ./src/*.jsx ./src/components/*.jsx ./src/components/pages/*.jsx --format html --output-file reports/eslint.html",
+    "security": "npm audit --json | npm-audit-html --output reports/audit.html"
   },
   "dependencies": {
     "@headlessui/react": "^1.6.4",
     "@heroicons/react": "^1.0.6",
     "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
+    "npx": "^10.2.2",
+    "plato": "^1.7.0",
     "postcss": "^8.4.14",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
-    "tailwindcss": "^3.0.24",
-    "npx": "^10.2.2"
+    "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "eslint": "^8.22.0",
+    "eslint-config-standard": "^14.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-security": "^1.7.1",
+    "es6-plato": "^1.2.3",
     "vite": "^2.9.9"
   }
 }
